--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     {
       "source": "/.well-known/security.txt",
       "destination": "/security.txt"
+    },
+    {
+      "source": "/api/contact",
+      "destination": "/api/contact.js"
     }
   ],
   "headers": [
@@ -23,7 +27,7 @@
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         { "key": "Permissions-Policy", "value": "geolocation=(), microphone=(), camera=()" },
         { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains; preload" },
-        { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://assets.topspin.standardwallet.topspingame.com; frame-src https://assets.topspin.standardwallet.topspingame.com; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;" }
+        { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://assets.topspin.standardwallet.topspingame.com https://*.vercel.app https://*.skillexgames.com; frame-src https://assets.topspin.standardwallet.topspingame.com; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;" }
       ]
     }
   ]
